Primera prueba, tira pantalla blanca de la actividad repeating y al parecer no inicializa el notificacion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">EED15</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="ticker">Feliz es el hombre que dia y noche lee en su ley</string>
 
 </resources>
