--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,17 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="ticker">Feliz es el hombre que dia y noche lee en su ley</string>
+    <string name="colapsado">Lee el examinando</string>
 
+<string name="collapsed_image">A single Android robot waving. Symbolises a collapsed
+        notification.
+    </string>
+
+    <string name="expanded">I\'m the expanded notification.\nCollapse me!</string>
+
+     <string name="expanded_image">Two Androids on top of each other. Symbolises an expanded
+        notification.
+    </string>
+
+    <string name = "intro_message">"Hola"</string>
 </resources>
