Se convirtio en servicio la repeating alarm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,10 @@
     <string name="ticker">Feliz es el hombre que dia y noche lee en su ley</string>
     <string name="colapsado">Lee el examinando</string>
 
-<string name="collapsed_image">A single Android robot waving. Symbolises a collapsed
-        notification.
+<string name="collapsed_image">Abre el examinando
     </string>
 
-    <string name="expanded">I\'m the expanded notification.\nCollapse me!</string>
+    <string name="expanded">La verdad los libertara</string>
 
      <string name="expanded_image">Two Androids on top of each other. Symbolises an expanded
         notification.
